manifests/go-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go
  template:
    metadata:
      labels:
        app: go-cont
    spec:
      containers:
      - image: docker.io/palsha/golshi:latest
        name: go
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: init
        configMap:
          name: init
          items:
          - key: init.sh
            path: init.sh
