manifests/postgresql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - image: postgres:15.3
        name: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: init
        configMap:
          name: init
          items:
          - key: init.sh
            path: init.sh
