manifests/postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
